--- a/GameplayLab5/GameplayLab5.vcxproj.filters
+++ b/GameplayLab5/GameplayLab5.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Matrix3f.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MyVector2f.h">
